// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-iwostn-0 cREeqm"
  >
    <div
      class="ant-design-pro ant-pro-basicLayout screen-md ant-pro-basicLayout-fix-siderbar ant-pro-basicLayout-side"
    >
      <section
        class="ant-layout ant-layout-has-sider"
        style="min-height: 100%;"
      >
        <div
          style="width: 208px; overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; transition: background-color 0.3s, min-width 0.3s, max-width 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);"
        />
        <aside
          class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-fixed ant-pro-sider-layout-side"
          style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
        >
          <div
            class="ant-layout-sider-children"
          >
            <div
              class="ant-pro-sider-logo"
              id="logo"
            >
              <a
                class=""
                href="/t/undefined/dashboard"
              >
                <div
                  data-testid="logo"
                />
              </a>
            </div>
            <div
              style="flex: 1; overflow-y: auto; overflow-x: hidden;"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark ant-pro-sider-menu"
                data-menu-list="true"
                role="menu"
                style="width: 100%;"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Dashboard"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/dashboard"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="speed-indicator-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Dashboard
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-submenu ant-menu-submenu-inline"
                  role="none"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-menu-submenu-title"
                    role="menuitem"
                    style="padding-left: 16px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      <a
                        class=""
                        href="/t/undefined/analytics"
                      >
                        <span
                          class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                        >
                          <div
                            data-testid="ai-outlined"
                          />
                        </span>
                        <span
                          class="ant-pro-menu-item"
                          title="AI Analytics"
                        >
                          AI Analytics
                        </span>
                      </a>
                    </span>
                    <i
                      class="ant-menu-submenu-arrow"
                    />
                  </div>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Timeline"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/timeline"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="calendar-date-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Timeline
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Reports"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/reports"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="reports-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Reports
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title=" "
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/1/placeholder"
                    >
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                           
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Venues"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/venues"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="location-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Venues
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Device Inventory"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/devices"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="devices-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Device Inventory
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Networks"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/networks"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="networks-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Networks
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Services"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/services"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="services-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Services
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Policies"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/policies"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="policies-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Policies
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Users"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/users"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="account-circle-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Users
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title=" "
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/2/placeholder"
                    >
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                           
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Administration"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/t/undefined/administration"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="admin-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Administration
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
            <div
              class="ant-pro-sider-links"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark ant-pro-sider-link-menu"
                data-menu-list="true"
                role="menu"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-pro-sider-collapsed-button"
                  data-menu-id="rc-menu-uuid-test-collapsed"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <div
                      data-testid="arrow-left"
                    />
                    <div
                      class="styledComponents__CollapseText-sc-iwostn-10 keaIHZ ant-pro-menu-item-title"
                    >
                      Collapse
                    </div>
                  </span>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
          </div>
        </aside>
        <div
          class="ant-layout"
          style="position: relative;"
        >
          <header
            class="ant-layout-header"
            style="height: 48px; line-height: 48px; background: transparent;"
          />
          <header
            class="ant-layout-header ant-pro-fixed-header ant-pro-fixed-header-action ant-pro-header-dark"
            style="padding: 0px; height: 48px; line-height: 48px; width: calc(100% - 208px); z-index: 19; right: 0px;"
          >
            <div
              class="ant-pro-global-header ant-pro-global-header-layout-side"
            >
              <div
                style="flex: 1;"
              >
                <div
                  class="styledComponents__LeftHeaderContentWrapper-sc-iwostn-2 bUJFbQ"
                >
                  <div
                    class="ant-divider ant-divider-vertical styledComponents__LogoDivider-sc-iwostn-3 gZTkFG"
                    role="separator"
                  />
                  <span
                    class="styledComponents__DropdownText-sc-iwostn-13 hwKuhP"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                      >
                        Left header
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="styledComponents__RightHeaderContentWrapper-sc-iwostn-4 espNOG"
              >
                <div>
                  Right header
                </div>
              </div>
            </div>
          </header>
          <main
            class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
          >
            <div
              class="styledComponents__Content-sc-iwostn-1 haxZGN"
            >
              <div>
                content
              </div>
            </div>
          </main>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout should render with custom tenant type correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-iwostn-0 cREeqm"
  >
    <div
      class="ant-design-pro ant-pro-basicLayout screen-md ant-pro-basicLayout-fix-siderbar ant-pro-basicLayout-side"
    >
      <section
        class="ant-layout ant-layout-has-sider"
        style="min-height: 100%;"
      >
        <div
          style="width: 208px; overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; transition: background-color 0.3s, min-width 0.3s, max-width 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);"
        />
        <aside
          class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-fixed ant-pro-sider-layout-side"
          style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
        >
          <div
            class="ant-layout-sider-children"
          >
            <div
              class="ant-pro-sider-logo"
              id="logo"
            >
              <a
                class=""
                href="/v/undefined/dashboard"
              >
                <div
                  data-testid="logo"
                />
              </a>
            </div>
            <div
              style="flex: 1; overflow-y: auto; overflow-x: hidden;"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark ant-pro-sider-menu"
                data-menu-list="true"
                role="menu"
                style="width: 100%;"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-menu-item-only-child"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                  title="Dashboard"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <a
                      class=""
                      href="/v/undefined/dashboard"
                    >
                      <span
                        class="styledComponents__MenuIcon-sc-iwostn-5 styledComponents__MenuIconOutlined-sc-iwostn-6 eXbqRI cEzRxN"
                      >
                        <div
                          data-testid="speed-indicator-outlined"
                        />
                      </span>
                      <span
                        class="ant-pro-menu-item"
                      >
                        <span
                          class="ant-pro-menu-item-title"
                        >
                          Dashboard
                        </span>
                      </span>
                    </a>
                  </span>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
            <div
              class="ant-pro-sider-links"
            >
              <ul
                class="ant-menu ant-menu-root ant-menu-inline ant-menu-dark ant-pro-sider-link-menu"
                data-menu-list="true"
                role="menu"
                tabindex="0"
              >
                <li
                  class="ant-menu-item ant-pro-sider-collapsed-button"
                  data-menu-id="rc-menu-uuid-test-collapsed"
                  role="menuitem"
                  style="padding-left: 16px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    <div
                      data-testid="arrow-left"
                    />
                    <div
                      class="styledComponents__CollapseText-sc-iwostn-10 keaIHZ ant-pro-menu-item-title"
                    >
                      Collapse
                    </div>
                  </span>
                </li>
              </ul>
              <div
                aria-hidden="true"
                style="display: none;"
              />
            </div>
          </div>
        </aside>
        <div
          class="ant-layout"
          style="position: relative;"
        >
          <header
            class="ant-layout-header"
            style="height: 48px; line-height: 48px; background: transparent;"
          />
          <header
            class="ant-layout-header ant-pro-fixed-header ant-pro-fixed-header-action ant-pro-header-dark"
            style="padding: 0px; height: 48px; line-height: 48px; width: calc(100% - 208px); z-index: 19; right: 0px;"
          >
            <div
              class="ant-pro-global-header ant-pro-global-header-layout-side"
            >
              <div
                style="flex: 1;"
              >
                <div
                  class="styledComponents__LeftHeaderContentWrapper-sc-iwostn-2 bUJFbQ"
                >
                  <div
                    class="ant-divider ant-divider-vertical styledComponents__LogoDivider-sc-iwostn-3 gZTkFG"
                    role="separator"
                  />
                  <div>
                    Left header
                  </div>
                </div>
              </div>
              <div
                class="styledComponents__RightHeaderContentWrapper-sc-iwostn-4 espNOG"
              >
                <div>
                  Right header
                </div>
              </div>
            </div>
          </header>
          <main
            class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
          >
            <div
              class="styledComponents__Content-sc-iwostn-1 haxZGN"
            >
              <div>
                content
              </div>
            </div>
          </main>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
